--- a/cloud_build.yaml
+++ b/cloud_build.yaml
@@ -2,4 +2,4 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/divine-axis-393212/sail_pred_app', '.']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/divine-axis-393212/sail_pred_app', '.']
+  args: ['push', 'gcr.io/divine-axis-393212/sail_pred_app']
