--- a/ML_flow_app/config/config.yaml
+++ b/ML_flow_app/config/config.yaml
@@ -3,4 +3,6 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: 
+  source_URL: https://github.com/Prajesh7/kubeflow_ML_app/blob/main/SAIL.NS.zip
+  local_data_file: artifacts/data_ingestion/data.zip
+  unzip_dir: artifacts/data_ingestion
