--- a/ML_flow_app/config/config.yaml
+++ b/ML_flow_app/config/config.yaml
@@ -21,4 +21,11 @@ model_trainer:
   train_data_path: artifacts/data_transformation/train.csv
   test_data_path: artifacts/data_transformation/test.csv
   model_name: model.joblib
-  
+
+model_evaluation:
+  root_dir: artifacts/model_evaluation
+  train_data_path: artifacts/data_transformation/train.csv
+  test_data_path: artifacts/data_transformation/test.csv
+  model_path: artifacts/model_trainer/model.joblib
+  metric_file_name: artifacts/model_evaluation/metrics.json
+  mlflow_uri: http://ec2-43-205-243-196.ap-south-1.compute.amazonaws.com:5000/
